fixing top padding on mobile version of single image view

--- a/src/_mobile.scss
+++ b/src/_mobile.scss
@@ -13,5 +13,6 @@
 
   .single-image-wrapper {
     flex-direction: column;
+    padding-top:10px;
   }
 }
